[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-assets>=2.1.0",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "requests>=2.32.3",
    "sendgrid>=6.11.0",
    "trafilatura>=2.0.0",
    "weasyprint>=65.1",
    "jsmin>=3.0.1",
    "cssmin>=0.2.0",
    "dnspython>=2.7.0",
]
